Department employees update